<resources>

    <string name="app_name">Events</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Course Management</string>
    
    <string name="enter_data_button">Enter Score Information</string>
    <string name="display_data_button">Show Score Data</string>
    <string name="exit_button">Exit</string>
    <string name="exit">Exit</string>
    <string name="club_tracker">Club Tracker</string>
    <string name="enter_club_type">Enter Club Type</string>
    <string name="enter_distance">Enter Club Distance</string>
    <string name="view_all">View All</string>
    <string name="search_data">Search</string>
    <string name="enter_club_data">Enter Club Data</string>

    <string name="enter_course">Enter Course Name</string>
    <string name="enter_putts">Enter Putts</string>
    <string name="enter_pennalties">Enter Pennalties</string>
    <string name="enter_score">Enter Score</string>
    <string name="enter_player">Enter Player Name</string>
    
    <string name="options_label">Options</string>
    <string name="settings_shortcut">o</string>
    
    <string name="music_label">Music</string>
    <string name="music_summary">Play background music</string>
    
    <string name="info_text">Information</string>
    <string name="info_label">Information About This Program</string>
    <string name="info_string">\
        This program allows you to enter the golf course name,
        your putts, penalties, total score and your name. You can also
        view all your of rounds you record at a later date.</string>
</resources>