<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/course"
        android:hint="@string/enter_course"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />


    <EditText
        android:id="@+id/putts"
        android:hint="@string/enter_putts"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <EditText
        android:id="@+id/pennalties"
        android:hint="@string/enter_pennalties"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    
    <EditText
        android:id="@+id/score"
        android:hint="@string/enter_score"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    
    <EditText
        android:id="@+id/player"
        android:hint="@string/enter_player"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/enter_data_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_data_button" />

        <Button
            android:id="@+id/exit_button_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit" />

    </TableRow>
    

</LinearLayout>