<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/background">
    
    <Button 
        android:id="@+id/enter_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_data_button"/>

    <Button
        android:id="@+id/display_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_data_button"/>

    
    <Button
        android:id="@+id/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_text"/>

    
    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_button"
        />

    

</LinearLayout>
